Made feature card shadows a little lighter again. Updated some comments. Tried to implement little colored placeholder boxed present before the move-uppp animation animates-in a piece of text. But couldn't get it to work and gave up. Adopted use of text-gradient-to-l-block on Trackpad headline where we forgot to use it before. Maybe more I forget. The styling of the LocalePicker is broken in Safari for some reason. Update: styling fixes itself when we open the page on a different domain than localhost. (Safari was seemingly caching some broken data with the domain and it just wouldn't go away by restarting the computer or clearing caches. Only accessing the page through http://192.168.1.107:3000 instead of localhost:3000 helped. Very confusing.) Added some notes on the issue.

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -317,7 +317,7 @@ Notes:
     /* Set `display: inline-block` and `position: relative` to make this compatible with cool-underline. We're not doing that here because this breaks line wrapping. */
   }
   .text-gradient-block-base {
-    @apply inline-block relative py-[1em] -my-[1em]; /* The padding adjustment is necessary so the bottom/top of tall characters like `g` isn't cut off. The margin compensates for it for the layout. */
+    @apply inline-block relative py-[0.05em] -my-[0.05em]; /* The slight padding adjustment is necessary so the bottom/top of tall characters like `g` isn't cut off. The margin compensates for it for the layout. This might lead to confusing issues? */
   }
   .text-gradient-to-l-block { /* Created this for use with the move-uppp class. The move-uppp animation needs the elements to be blocks. */
     @apply text-gradient-to-l text-gradient-block-base;
